Make WebMediaStream's track order match webrtc::MediaStreamInterface's.

The previous use of std::map made the track order "random" based on track
pointer values.

This fixes subtle bugs, one of which was detected in
https://chromium-review.googlesource.com/c/chromium/src/+/753598/,
where the stream.getTracks() track order became very flaky. It is
likely this bug is already causing flakiness, but I was unable to
repro outside of that CL.

When this CL and the referenced CL lands we'll be able to remove the
test from TestExpectations as a flaky test. But due to another flake,
this CL is not enough to remove it from TestExpectations.

The test in question:
external/wpt/webrtc/RTCPeerConnection-setRemoteDescription-tracks.https.html

Bug: 787461
Change-Id: I0d5450bf0534a2148818aa843404d6dd43ac5e0b
Reviewed-on: https://chromium-review.googlesource.com/782321
Reviewed-by: Guido Urdaneta <guidou@chromium.org>
Commit-Queue: Henrik Boström <hbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518616}
Former-commit-id: fbcc09282dc8cd984d220f1bf5135d6f3c44701f